# ENPOWER

./: README.md  Simple_ES_PV_HP_v2.py  Simple_Energy_System_sens.py  With_Context_HP_data_m2_v2.py  classes_database.py  documentation_classes.md  module_integration.py  pyproject.toml  requirements.txt
data/: Spain_Hourly_Electricity_and_Gas_Prices_2023__EUR_kWh_ ChatGPT.csv  seriescalc_pvgis.csv  tmy_pvgis.epw
data_packages/: SunHorizon_CalendarPlots_v0.3_RigaImanta.py  diagram.py  draw.py  processing.py  transform_structure.py
helpers/: constants.py  helpers.py  oemof_model_construction_helpers.py
kpi_module/: KPI_module.py  key_performance_indicators.py
model_configurations/: config.yaml  config_CHPC.yaml  config_PV.yaml  config_STC.yaml  config_TS.yaml
models/: chiller_model.py  geothermal.py  pv_model.py  solar_thermal_model.py
scenario_generator/: RESbased_scenario_generator.py  context_creation.py  country_RES_library.py  function_documentation.md  get_new_context.py  total_primary_energy_GHG_costs_intensity.csv
scenario_generator/Electricity_profiles/: Electricity_demand_calculation.py
scenario_generator/RESlibrary/: action_keys.csv
scenario_generator/RESlibrary/Country_data/: EVs.csv  biomass.csv  countries_max_share.csv
scenario_generator/catalogues/: energy_carrier.json
