[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
oemof = "^1.0"
oemof-solph = "^0.5.5"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
geopandas = "^1.0.1"
fastapi = "^0.115.4"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
rasterio = "^1.4.2"
jsonschema = "^4.23.0"
geoalchemy2 = "^0.15.2"
psycopg2-binary = "^2.9.10"
scikit-learn = "^1.5.2"
plotly = "^5.24.1"
oemof-thermal = "^0.0.6"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
